feat(batsi-ng-models): set api base path dynamically
